--- a/Front-end/isix/package.json
+++ b/Front-end/isix/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-lottie-player": "^1.5.5",
+    "react-webcam": "^7.1.1",
     "styled": "^1.0.0",
     "styled-components": "^6.0.7",
     "suspend-react": "^0.1.3",
